# ChangeLog for app-text/rarian
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/rarian/ChangeLog,v 1.22 2008/05/05 00:56:23 dirtyepic Exp $

  05 May 2008; Ryan Hill <dirtyepic@gentoo.org> rarian-0.8.0.ebuild,
  rarian-0.8.0-r1.ebuild:
  Keyword currently masked versions too.

  03 May 2008; Ryan Hill <dirtyepic@gentoo.org> rarian-0.6.0-r1.ebuild:
  Keyword ~mips.

*rarian-0.8.0-r1 (30 Mar 2008)

  30 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/rarian-0.8.0-info-segfault.patch, +rarian-0.8.0-r1.ebuild:
  Revbump with a patch to fix a segfault

*rarian-0.8.0 (23 Mar 2008)

  23 Mar 2008; Mart Raudsepp <leio@gentoo.org> +rarian-0.8.0.ebuild:
  New version for GNOME-2.22. Recognizes lzma packed man and info pages,
  follows new freedesktop specification for categorization which causes it to
  not work well with yelp-2.20 - use a matching yelp-2.22

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> rarian-0.6.0-r1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> rarian-0.6.0-r1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> rarian-0.6.0-r1.ebuild:
  Marking rarian-0.6.0-r1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> rarian-0.6.0-r1.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> rarian-0.6.0-r1.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org> rarian-0.6.0-r1.ebuild:
  amd64 stable wrt #199740

  17 Nov 2007; nixnut <nixnut@gentoo.org> rarian-0.6.0-r1.ebuild:
  Added ~ppc wrt bug 196360

  29 Oct 2007; Mart Raudsepp <leio@gentoo.org> -rarian-0.6.0.ebuild:
  Removing old reversion that is without the memory clobbering fix

  28 Oct 2007; Markus Rothe <corsair@gentoo.org> rarian-0.6.0-r1.ebuild:
  Added ~ppc64; bug #196360

  23 Oct 2007; Raúl Porcel <armin76@gentoo.org> rarian-0.6.0-r1.ebuild: