@@ -1,6 +1,10 @@
 # ChangeLog for app-text/rarian
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/rarian/ChangeLog,v 1.22 2008/05/05 00:56:23 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/rarian/ChangeLog,v 1.23 2008/06/29 22:54:25 eva Exp $
+
+  29 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  rarian-0.8.0-r1.ebuild:
+  set localstatedir, bug #217406
 
   05 May 2008; Ryan Hill <dirtyepic@gentoo.org> rarian-0.8.0.ebuild,
   rarian-0.8.0-r1.ebuild:
